<resources>
    <string name="app_name">Charter</string>
    <string name="saveButton">Zapisz</string>
    <string name="loadDataButton">Wczytaj dane</string>
    <string name="configureChartButton">Konfiguruj</string>
    <string name="submitConfigButton">Zatwierdź</string>
    <string name="cancelButton">Anuluj</string>
    <string name="percentValuesOption">Użyj wartości procentowych</string>
    <string name="notSupported">Nie wspierany typ danych</string>
    <string name="fontSize">Rozmiar czcionki</string>
    <string name="description">Opis wykresu</string>
    <string name="writePath">Podaj nazwę pliku</string>
    <string name="saveSuccess">Zapisano w galerii!</string>
    <string-array name="chart_types">
        <item>Wykres liniowy</item>
        <item>Wykres słupkowy</item>
        <item>Wykres kołowy</item>
        <item>Wykres radarowy</item>
    </string-array>
</resources>